# careeros-local

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  alembic.ini  docker-compose.g4f.yml  docker-compose.yml  failures.txt  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-tooling.txt  requirements.txt  run.py  security-exceptions.json
.github/: dependabot.yml  native-targets.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  desktop-release.yml  pages.yml
.serena/: project.yml
.specify/: feature.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
alembic/: env.py
alembic/versions/: 4e50d54b9df1_split_job_model_and_extend_profile.py  7b2a37169931_add_email_supabase_id_and_make_hashed_.py  7d76134d9a36_extract_scraped_jobs.py  a1b2c3d4e5f6_generalize_job_model.py  a2b3c4d5e6f7_add_performance_indexes.py  a7b8c9d0e1f2_reconcile_legacy_schema.py  aa38af1be029_add_scrapedjob_uniqueconstraint.py  b3c4d5e6f7a8_add_missing_columns.py  b8c9d0e1f2a3_add_local_ai_audit.py  c1d2e3f4g5h6_add_summary_caching_query_control_columns.py  c9d0e1f2a3b4_add_resume_version_workflows.py  d0e1f2a3b4c5_add_application_next_action_projection.py  d4e5f6a7b8c9_add_scraped_job_normalization_columns.py  e1f2a3b4c5d6_quarantine_legacy_heuristic_analysis.py  e5f6a7b8c9d0_add_profile_normalization_columns.py  f6a7b8c9d0e1_add_job_uniqueconstraint.py  g7h8i9j0k1l2_drop_scraped_job_summary_column.py  h8i9j0k1l2m3_add_intent_and_subscores.py  i9j0k1l2m3n4_add_v2_profile_and_job_subscores.py  j0k1l2m3n4o5_add_composite_indexes.py  k1l2m3n4o5p6_add_scraped_job_extended_normalization.py  l2m3n4o5p6q7_drop_job_is_scraped_column.py  m3n4o5p6q7r8_add_analysis_structured_red_flags_posting_quality.py  n4o5p6q7r8s9_add_feedback_tracking_and_user_preferences.py  o5p6q7r8s9t0_add_composite_index_on_jobs_for_user_dismissed_created_at_filter.py  o5p6q7r8s9t0_add_composite_job_index.py  p6q7r8s9t0u1_add_search_profile_runtime_lock.py  q7r8s9t0u1v2_add_db_backed_search_status_columns.py  r8s9t0u1v2w3_add_compact_search_caches.py  s9t0u1v2w3x4_add_career_vault.py  t0u1v2w3x4y5_add_resume_studio.py  u1v2w3x4y5z6_remove_remote_identity.py  v2w3x4y5z6a7_add_applications.py  w3x4y5z6a7b8_add_career_coach.py  x4y5z6a7b8c9_add_durable_workflows.py  y5z6a7b8c9d0_add_application_read_index.py  z6a7b8c9d0e1_add_resume_canvas.py
backend/: Dockerfile  README.md  __init__.py  main.py  model_registry.py  pre_start.py
backend/ai/: __init__.py  attestation.py  audit.py  contracts.py  evaluation.py  grounding.py  job_normalization.py  match_evidence.py  match_policy.py  matching.py  models.py  orchestrator.py  pipeline.py  planning.py  profile_normalization.py  repository.py  reranking.py  retrieval.py  runtime_policy.py  task_specs.py
backend/api/: api.py  deps.py
backend/applications/: __init__.py  agenda.py  exports.py  models.py  readiness.py  readiness_export.py  schemas.py  service.py  snapshots.py
backend/career/: __init__.py  coach.py  coach_models.py  coach_schemas.py  completeness.py  deletion.py  goal_schemas.py  models.py  payloads.py  repository.py  schemas.py  service.py  sources.py
backend/core/: config.py  constants.py  exceptions.py  logging.py
backend/data/: __init__.py  domain_affinity.py  skill_taxonomy.json
backend/db/: base.py  types.py
backend/desktop/: __init__.py  lifecycle.py  session.py  settings.py
backend/inference/: __init__.py  catalog.py  endpoint.py  llama_cpp.py  managed_runtime.py  model_catalog.json  model_catalog.sha256  ollama.py  ports.py  runtime_schema.py  service.py
backend/jobs/: __init__.py  matching.py  urls.py
backend/models/: __init__.py  base_model.py  job.py  search_profile.py  user.py
backend/portability/: __init__.py  archive.py  manifest.py  restore.py  schemas.py
backend/providers/: circuit_breaker.py
backend/repositories/: base.py  job_repository.py  profile_repository.py  user_repository.py
backend/resumes/: __init__.py  canvas.py  canvas_schemas.py  canvas_validation.py  claim_service.py  content.py  draft_mutations.py  draft_service.py  exceptions.py  generator.py  models.py  photos.py  publication_service.py  publishing.py  quality.py  schemas.py  service.py  storage.py  sync.py  sync_service.py
backend/schemas/: __init__.py  job.py  profile.py  search.py  user.py
desktop/: __init__.py  backend_main.py  careeros-backend.spec
docker/: backend-entrypoint.sh
docs/: architecture.md  brand.md  daily-driver.md  demo.md  development.md  devpost.md  index.html  privacy.md  releasing.md
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx-main.conf  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
frontend/src-tauri/capabilities/: main.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/icons/android/values/: ic_launcher_background.xml
frontend/src-tauri/src/: commands.rs  lib.rs  lifecycle.rs  main.rs
scripts/: __init__.py  audit_frontend_licenses.mjs  audit_frontend_licenses.test.mjs  build_backend_sidecar.py  check_release_versions.py  check_security_exceptions.py  demo_asset_publish.mjs  demo_asset_publish.test.mjs  license_contract.py  package_desktop.ps1  package_desktop.sh  publish_github_release.py  record_demo.mjs  release_assets.py  release_candidate.py  release_contract.py  release_github.py  render_brand_assets.mjs  render_demo_assets.py  run_desktop.py  seed_demo.py  smoke_native_bundle.py  smoke_packaged_backend.py  smoke_windows_installer.ps1  validate_portfolio_site.py  verify_release_source.py  verify_sbom_attestations.py  verify_sidecar_build.py  write_artifact_checksums.py
(+453 files in other folders)
