[project]
name = "job-hunter-ai"
version = "1.0.0"
description = "AI-powered Swiss job search platform with automated scraping, LLM analysis, and smart search scheduling"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "live: marks tests that hit live external APIs (deselect with '-m \"not live\"')",
    "slow: marks tests as slow-running",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

# ── Per-module overrides ──────────────────────────────────────────────────────
# The codebase uses SQLAlchemy 1.x Column-based ORM models whose attribute
# assignments are typed as "Column[X]" rather than "X", causing widespread
# false-positive assignment errors that do not reflect real bugs.
# Provider integrations use dynamic patterns (httpx, Gemini SDK, etc.) that
# require the corresponding stubs which are not installed.
# These overrides suppress pre-existing noise so CI remains green.

[[tool.mypy.overrides]]
module = [
    # Provider integrations — external SDK patterns
    "backend.providers.*",
    # Core config uses validator patterns that return Any
    "backend.core.*",
    # Models define Column-typed attributes
    "backend.models.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    # Repositories use SQLAlchemy Column attribute assignment (ORM pattern)
    "backend.repositories.profile_repository",
    "backend.repositories.base",
    "backend.repositories.job_repository",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    # Services with pre-existing SQLAlchemy Column / Session|None type debt
    "backend.services.search_service",
    "backend.services.scheduler",
    "backend.services.profile_service",
    "backend.services.preference_service",
    "backend.services.llm_service",
    "backend.services.utils",
    "backend.services.search.*",
]
ignore_errors = true
