[project]
name = "careeros-local"
version = "1.1.2"
description = "Private, local-first AI career workspace for resumes, job matching, and application tracking"
readme = "README.md"
authors = [
    { name = "Djenis Ejupi" },
    { name = "CareerOS Local contributors" },
]
license = "MIT"
requires-python = ">=3.12,<3.14"
keywords = ["career", "local-first", "privacy", "tauri", "fastapi", "react"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "acceptance: artifact-level tests enabled by an explicit packaged binary or service",
    "live: marks tests that hit live external APIs (deselect with '-m \"not live\"')",
    "slow: marks tests as slow-running",
    "performance: opt-in repeatable performance acceptance tests",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false

# ── Per-module overrides ──────────────────────────────────────────────────────
# The remaining overrides are an explicit debt ledger, not package-wide
# exclusions. Files that type-check successfully stay covered by CI.

[[tool.mypy.overrides]]
module = [
    # Dynamic provider sessions and legacy SQLAlchemy projections
    "backend.providers.jobs.session",
    "backend.providers.jobs.adecco.client",
    "backend.providers.jobs.localdb.client",
    "backend.providers.jobs.swissdevjobs.transformer",
    # Pydantic validator compatibility helpers
    "backend.core.config",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    # Repositories use SQLAlchemy Column attribute assignment (ORM pattern)
    "backend.repositories.profile_repository",
    "backend.repositories.base",
    "backend.repositories.job_repository",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    # Services with pre-existing SQLAlchemy Column / Session|None type debt
    "backend.services.scheduler",
    "backend.services.profile_service",
    "backend.services.search.persistence",
    # Cross-capability mixins are validated through their concrete compositions.
    "backend.ai.runtime_policy",
    "backend.ai.planning",
    "backend.ai.profile_normalization",
    "backend.ai.job_normalization",
    "backend.ai.matching",
    "backend.ai.reranking",
    "backend.search.*",
]
ignore_errors = true
