[package]
name = "careeros-local"
version = "1.4.0"
description = "Open-source, local-first career utility"
authors = ["Ejupi Labs", "CareerOS Local contributors"]
edition = "2021"
rust-version = "1.84"
license = "MIT"
repository = "https://github.com/ejupi-djenis30/careeros-local"

[lib]
name = "careeros_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "=2.4.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
